Fix display overflow issue for large numbers
-Added declaration for overflow in display/p ruleset.
-Can scroll to check long input or result.
-Will scroll to the end after each input to show current position.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ p {
     text-align: end;
     padding: 1vmin;
     border-radius: 1vmin;
+    width: 52vmin;
+    overflow: auto;
 }
 
 .main-container {
@@ -24,6 +26,8 @@ p {
     flex-direction: column;
     padding: 1vmin;
     background-color: lightsteelblue;
+    align-items: center;
+    width: 54vmin;
 }
 
 .button-container {
